--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "node": "^19.1.0",
+    "nodemon": "^2.0.20",
     "request": "^2.88.2"
   }
 }
