--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node index.js"
+    "start": "NODE_ENV=development ./node_modules/.bin/netlify-lambda serve src",
+    "build": "NODE_ENV=production ./node_modules/.bin/netlify-lambda build src"
   },
   "repository": {
     "type": "git",
@@ -19,8 +20,8 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
-    "node": "^19.1.0",
-    "nodemon": "^2.0.20",
-    "request": "^2.88.2"
+    "netlify-lambda": "^2.0.15",
+    "request": "^2.88.2",
+    "serverless-http": "^3.1.0"
   }
 }
