--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,7 @@
 [build]
-  functions = "functions"
+  functions="functions"
 
-[dev]
-  publish = "dist"
+ [[redirects]]
+   to="/.netlify/functions/_app/:splat"
+   from="/*"
+   status=200 
