--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./bin/www.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
